[VG-49] fixed login align

--- a/code/src/assets/styles/components/LoginForm.less
+++ b/code/src/assets/styles/components/LoginForm.less
@@ -7,4 +7,7 @@
         margin: auto;
         color: #ffffff !important;
     }
+    a {
+        text-align: center;
+    }
 }
